--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
     "@angular/core": "~9.1.12",
-    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.12",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "@ngrx/store": "^9.2.0",
     "angularfire2": "^5.4.2",
     "firebase": "^7.17.1",
-    "hammerjs": "^2.0.8",
     "rxjs": "~6.6.2",
     "rxjs-compat": "^6.6.0",
     "tslib": "^1.10.0",
@@ -36,9 +35,9 @@
     "@angular/cli": "~9.1.12",
     "@angular/compiler-cli": "~9.1.12",
     "@angular/language-service": "~9.1.12",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -50,6 +49,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
+    "typescript": "^3.8.3"
   }
 }
