--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.7",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^9.0.0-rc.8",
     "@angular/common": "~10.0.7",
     "@angular/compiler": "~10.0.7",
     "@angular/core": "~10.0.7",
