--- a/package.json
+++ b/package.json
@@ -7,24 +7,27 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.7",
-    "@angular/cdk": "^9.0.0-rc.8",
+    "@angular/cdk": "^10.1.1",
     "@angular/common": "~10.0.7",
     "@angular/compiler": "~10.0.7",
     "@angular/core": "~10.0.7",
-    "@angular/flex-layout": "^9.0.0-beta.31",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.7",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "^10.1.1",
     "@angular/platform-browser": "~10.0.7",
     "@angular/platform-browser-dynamic": "~10.0.7",
     "@angular/router": "~10.0.7",
+    "@grapecity/wijmo.angular2.all": "^5.20202.699",
     "@ngrx/store": "^9.2.0",
     "angularfire2": "^5.4.2",
     "firebase": "^7.17.1",
+    "lodash-es": "^4.17.15",
     "rxjs": "~6.6.2",
     "rxjs-compat": "^6.6.0",
     "tslib": "^2.0.0",
